testcases/compiler2015/Phase2/CompileError/break1-5100379071-puyouer.c
/*
break not within loop or switch
*/
int main() {
    while (1) { }
    break;
    return 0;
}
